# sonic-swss

./: .bazelrc  BUILD  MODULE.bazel  flags.bzl  swss_helpers.bzl
bazel/: BUILD  cc_wrappers.bzl  ensure_cc_wrappers.sh  flags.bzl
bazel/dashapi/: BUILD.bazel
bazel/hiredis/: BUILD.bazel
bazel/jansson/: BUILD.bazel
bazel/libnl3/: BUILD.bazel
bazel/libteam/: BUILD.bazel
bazel/saimetadata/: BUILD.bazel
bazel/sairedis/: BUILD.bazel
bazel/saivs/: BUILD.bazel
bazel/swsscommon/: BUILD.bazel
bazel/zmq/: BUILD.bazel
cfgmgr/: BUILD
fdbsyncd/: BUILD
fpmsyncd/: BUILD
gcovpreload/: BUILD
gearsyncd/: BUILD
lib/: BUILD
mclagsyncd/: BUILD
natsyncd/: BUILD
neighsyncd/: BUILD
orchagent/: BUILD  aclorch.cpp
portsyncd/: BUILD
swssconfig/: BUILD
teamsyncd/: BUILD
tests/: BUILD
tests/mock_tests/: BUILD
tlm_teamd/: BUILD
warmrestart/: BUILD
