package(default_visibility = ["//visibility:public"])

alias(
    name = "libnl3",
    actual = "@libnl3//:libnl_3",
)

alias(
    name = "libnl-route-3",
    actual = "@libnl3//:libnl_route_3",
)

alias(
    name = "libnl-genl-3",
    actual = "@libnl3//:libnl_genl_3",
)

alias(
    name = "libnl-nf-3",
    actual = "@libnl3//:libnl_nf_3",
)

